nav bar small gap fix try

--- a/style/main.css
+++ b/style/main.css
@@ -103,6 +103,7 @@ a {
 
 nav {
     position: fixed;
+    top: 0;
     width: 100vw;
     height: 9vh;
     display: flex;
